(Re-)Added filter functionality on mobile + small style fixes

--- a/src/shared-styles/_variables.scss
+++ b/src/shared-styles/_variables.scss
@@ -54,7 +54,7 @@ $breakpoint-sm: 767px;
 $z-index-overlay-content: 999;
 $z-index-menu: 1000;
 $z-index-menu-toggle: 1001;
-$z-index-overlay-all: 1002;
+$z-index-overlay-all: 99999999999;
 
 // emoji
 $emoji-size: 80px;
